--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/EmanSza/MySoftwareStore#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0"
   }
 }
